# Eloy

./: CMakeLists.txt  README.md  imgui.ini
samples/: CMakeLists.txt
samples/part1/: CMakeLists.txt  main.cpp
samples/part2/: CMakeLists.txt  main.cpp
samples/part3/: CMakeLists.txt  main.cpp
source/: AABB.hpp  Behavior.hpp  Eloy.cpp  Eloy.hpp  Engine.cpp  Engine.hpp  EngineImGui.hpp  EngineParameters.hpp  Error.hpp  FluidBehavior.hpp  Kernels.hpp  PBDPackedSolver.cpp  PBDPackedSolver.hpp  PBDSolver.cpp  PBDSolver.hpp  PBDSolverImGui.hpp  PBDSolverParameters.hpp  PBDSolverZIndex.hpp  PBDVerletSolver.cpp  PBDVerletSolver.hpp  PBDVerletSolverImGui.hpp  ParticlesData.hpp  ParticlesRendering.hpp  ParticlesRenderingSpf.hpp  README_W1.md  SolverUtils.cpp  SolverUtils.hpp
source/profiling/: tsc_x86.cpp  tsc_x86.hpp
source/shaders/: ScreenSpaceFluid.frag  ScreenSpaceFluidBilateralFilter.frag  ScreenSpaceFluidBlur.frag  ScreenSpaceFluidBlur.vert  ScreenSpaceFluidGaussianBlur.frag  ScreenSpaceFluidPass1.frag  ScreenSpaceFluidPass2.frag  ScreenSpaceFluidPass2.vert  ScreenSpaceFluidThickness.frag  ScreenSpaceFluidThickness.vert
